--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,28 @@
 layout: base.html
 ---
 
-<section class="container">
-  <div class="give-up-counter">
-    <div id="counter"></div>
-    <h2>Times I've Wanted to Give Up</h2>
-  </div>
+<div class="wrapper">
+  <section class="container">
+    <div class="box">
+      <div id="counter"></div>
+      <h1>Times I've Wanted to Give Up</h1>
+    </div>
 
-  <div class="journal">
-    <h1>Current Project:</h1>
+    <div class="box">
+      <h1>Wood Working Journal</h1>
+    </div>
+    <script src="/js/counter.js"></script>
+  </section>
 
-    <img src="/assets/carvings.svg" alt="Hard Maple Desk Front Carvings" />
+  <section class="separator">
+    <h1></h1>
+  </section>
 
-    <h3>Project Notes and Lessons Learned</h3>
-  </div>
+  <section class="container">
+    <div class="journal">
+      <h1>Hard Maple Desk:</h1>
 
-  <script src="/counter.js"></script>
-</section>
+      <img src="/assets/carvings.svg" alt="Hard Maple Desk Front Carvings" />
+    </div>
+  </section>
+</div>
