--- a/src/journal.html
+++ b/src/journal.html
@@ -4,3 +4,10 @@ pageTitle: Journal
 tags: nav
 order: 1
 ---
+
+<div class="wrapper">
+  <section class="separator">
+    <h1>Woodworking Journal</h1>
+  </section>
+  <section class="container"></section>
+</div>
