--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: base.html
 ---
 
 <div class="wrapper">
-  <section class="container">
+  <!--<section class="container">
     <div class="box">
       <div id="counter"></div>
       <h1>Times I've Wanted to Give Up</h1>
@@ -13,17 +13,17 @@ layout: base.html
       <h1>Wood Working Journal</h1>
     </div>
     <script src="/js/counter.js"></script>
-  </section>
+  </section>-->
 
   <section class="separator">
-    <h1></h1>
+    <h1>Projects</h1>
   </section>
 
-  <section class="container">
+  <!--<section class="container">
     <div class="journal">
       <h1>Hard Maple Desk:</h1>
 
       <img src="/assets/carvings.svg" alt="Hard Maple Desk Front Carvings" />
     </div>
-  </section>
+  </section>-->
 </div>
