--- a/src/_journal/aug2420.html
+++ b/src/_journal/aug2420.html
@@ -8,8 +8,17 @@ day: Aug 24
 order: 0
 ---
 
-<p>
-  The start (or more like middle) of a pine work bench! I thought I could go
-  without buying clamps, but at least its coming together now. Wanted to give up
-  just a little when thinking about the cost of clamps
-</p>
+<div class="wrapper">
+  <section class="title">
+    <h1>Woodworking Journal</h1>
+    <h2>{{ site.data.year }}</h2>
+  </section>
+
+  <section class="container">
+    <p>
+      The start (or more like middle) of a pine work bench! I thought I could go
+      without buying clamps, but at least its coming together now. Wanted to
+      give up just a little when thinking about the cost of clamps
+    </p>
+  </section>
+</div>
