--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: base.html
 ---
 
 <div class="wrapper">
-  <section class="separator">
+  <section class="title">
     <h1>Projects</h1>
   </section>
 
