changing basic layout

--- a/src/index.html
+++ b/src/index.html
@@ -2,3 +2,9 @@
 layout: base.html
 pageTitle: Home
 ---
+
+<section class="titleHeader">
+  <div class="title">
+    <h1>CHULMIN HAN</h1>
+  </div>
+</section>
