--- a/src/pages/digital.html
+++ b/src/pages/digital.html
@@ -1,13 +1,13 @@
 ---
 layout: base.html
-pageTitle: About
-tags: nav
-order: 3
+pageTitle: Digital
+tags: worksNav
+order: 1
 ---
 
 <section class="titleHeader">
   <div class="title">
-    <h1>ABOUT</h1>
+    <h1>DIGITAL WORKS</h1>
   </div>
 </section>
 
