--- a/src/pages/traditional.html
+++ b/src/pages/traditional.html
@@ -1,13 +1,13 @@
 ---
 layout: base.html
-pageTitle: About
-tags: nav
-order: 3
+pageTitle: Traditional
+tags: worksNav
+order: 2
 ---
 
 <section class="titleHeader">
   <div class="title">
-    <h1>ABOUT</h1>
+    <h1>TRADITIONAL WORKS</h1>
   </div>
 </section>
 
